--- a/imageapp/src/components/styles/_contact.scss
+++ b/imageapp/src/components/styles/_contact.scss
@@ -1,15 +1,20 @@
-.Contact{
+.constactMain{
     background-color: black;
-    height: 100vh;
-
-    display: flex;
-    flex-direction: row;
+    width:100vw;
+    @include breakpoint(s){  height: 100%;}
+    @include breakpoint(m){   height: 100%;}
+    @include breakpoint(l){   height: 100vh;}
+    padding-bottom: 10rem;
+}
+.Contact{
+    display: flex; 
     font-family: 'Allerta Stencil', sans-serif;
-  
+    @include breakpoint(s){ flex-direction:column;  }
+    @include breakpoint(m){ flex-direction:row;  }
+    @include breakpoint(l){   flex-direction: row; }
 }
 .contactInfo{
- 
-   margin:10rem 10rem;
+   margin:10rem 10rem 0 10rem;
    p{
        font-size: 2rem;
    }
@@ -19,37 +24,38 @@
 }
 
 .contactMap{
- 
-  margin: 10rem -15rem;
-  height: 50rem;
-  width:60rem;
-   border: 2px solid white;
+    height: 50rem;
+    border: 2px solid white;
+    @include breakpoint(s){  width:30rem;margin: 1rem 2rem;}
+    @include breakpoint(m){  width:45rem;margin: 10rem 0rem;}
+    @include breakpoint(l){  width:60rem;margin: 10rem -3rem;}
 }
 .contact_container_top{
-       margin:0 -4rem;
     background-color: white;
-    width: 60rem;
+    @include breakpoint(s){ width: 30rem; margin:0 -8rem;}
+    @include breakpoint(m){ width: 30rem; margin:0 -7rem;}
+    @include breakpoint(l){ width: 60rem; margin:0 -4rem;}
 }
 .contact_container_medium{
-    margin:3rem 10rem;
     background-color: white;
     -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 5% 100%);
-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 5% 100%);
-    width:35rem;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 5% 100%);
     height:15rem;
     padding:2rem 0 0 2rem;
-
+    @include breakpoint(s){ width: 30rem; margin:3rem -8rem;}
+    @include breakpoint(m){ width: 30rem; margin:3rem -5rem;}
+    @include breakpoint(l){ width: 35rem; margin:3rem 10rem;}
 }
 .contact_container_bottom{
-    margin:10rem;
-    color: white;
+        color: white;
+        @include breakpoint(s){margin:0 -7rem;}
+        @include breakpoint(m){margin:0 -5rem;}
+        @include breakpoint(l){margin:0 -5rem;}
 }
 .contact_icons{
-    margin: 5rem 0;
     i{
- font-size: 3rem;
- margin: 0 2rem;
- color: white;
+        font-size: 3rem;
+        margin: 5rem 1rem;
+        color: white;
     }
-   
 }
